--- a/client/src/app/program/program.component.html
+++ b/client/src/app/program/program.component.html
@@ -14,10 +14,6 @@
                 <ion-label>{{ 'info' | translate }}</ion-label>
             </ion-segment-button>
 
-            <ion-segment-button value="users">
-                <ion-label>{{ 'users' | translate }}</ion-label>
-            </ion-segment-button>
-
             @for (week of getWeeksArray().controls; track $index; let i = $index) {
             <ion-segment-button [value]="'week-'+i">
                 <ion-label> {{ 'week' | translate }} {{i+1}}</ion-label>
@@ -31,65 +27,60 @@
     <form [formGroup]="programForm" (ngSubmit)="saveChanges()">
         <div class="form">
             @if (activeTab === 'info') {
-            <ion-list lines="none">
-                <ion-item>
-                    <ion-input label="{{ 'name' | translate }}" labelPlacement="floating" formControlName="name"
-                        type="text"></ion-input>
-                </ion-item>
-                <ion-item>
-                    <ion-textarea label="{{ 'description' | translate }}" labelPlacement="floating"
-                        formControlName="description" rows="3"></ion-textarea>
-                </ion-item>
-                <ion-item>
-                    <ion-label>{{ 'duration_weeks' | translate }}</ion-label>
-                    <ion-select formControlName="duration">
-                        @for (num of weeks; track num) {
-                        <ion-select-option [value]="num">
-                            {{num}} {{ 'weeks' | translate }}
-                        </ion-select-option>
-                        }
-                    </ion-select>
-                </ion-item>
-            </ion-list>
-            }
+            <ion-item>
+                <ion-input label="{{ 'name' | translate }}" labelPlacement="floating" formControlName="name"
+                    type="text"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-textarea label="{{ 'description' | translate }}" labelPlacement="floating"
+                    formControlName="description" rows="3"></ion-textarea>
+            </ion-item>
+            <ion-item>
+                <ion-label>{{ 'duration_weeks' | translate }}</ion-label>
+                <ion-select formControlName="duration">
+                    @for (num of weeks; track num) {
+                    <ion-select-option [value]="num">
+                        {{num}} {{ 'weeks' | translate }}
+                    </ion-select-option>
+                    }
+                </ion-select>
+            </ion-item>
 
-            @if (activeTab === 'users') {
-            <div class="user-list-container">
-                <ion-list>
-                    @for (user of getAssignedUsers().controls; track user.get('id').value) {
-                    <ion-item-sliding>
-                        <ion-item>
-                            <ion-avatar slot="start">
-                                <img [src]="user.get('avatar').value">
-                            </ion-avatar>
-                            <ion-label>
-                                <h2>{{ user.get('name').value }}</h2>
-                                <p>{{ user.get('email').value }}</p>
+            <ion-item lines="none">
+                <ion-label>
+                    <ion-list>
+                        @for (user of getAssignedUsers().controls; track user.get('id').value) {
+                        <ion-item-sliding>
+                            <ion-item>
+                                <ion-avatar slot="start">
+                                    <img [src]="user.get('avatar').value">
+                                </ion-avatar>
+                                <ion-label>
+                                    <h2>{{ user.get('name').value }}</h2>
+                                    <p>{{ user.get('email').value }}</p>
+                                </ion-label>
+                            </ion-item>
+                            <ion-item-options side="end">
+                                <ion-item-option color="danger" (click)="removeAssignedUser(user.get('id').value)">
+                                    <ion-icon slot="icon-only" name="trash"></ion-icon>
+                                </ion-item-option>
+                            </ion-item-options>
+                        </ion-item-sliding>
+                        } @empty{
+                        <ion-item lines="none">
+                            <ion-label class="ion-text-center" [color]="'medium'">
+                                {{ 'no_users_assigned' | translate }}
                             </ion-label>
                         </ion-item>
-
-                        <ion-item-options side="end">
-                            <ion-item-option color="danger" (click)="removeAssignedUser(user.get('id').value)">
-                                <ion-icon slot="icon-only" name="trash"></ion-icon>
-                            </ion-item-option>
-                        </ion-item-options>
-
-                    </ion-item-sliding>
-                    }@empty{
-                    <ion-item lines="none" class="ion-margin-top">
-                        <ion-label class="ion-text-center" [color]="'medium'">
-                            {{ 'no_users_assigned' | translate }}
-                        </ion-label>
-                    </ion-item>
-                    }
-                </ion-list>
-
-                <div class="ion-padding-top ion-padding-bottom">
-                    <ion-button expand="block" (click)="openAssignUsersModal()">
-                        {{ 'add_user' | translate }}
-                    </ion-button>
-                </div>
-            </div>
+                        }
+                    </ion-list>
+                    <div class="ion-padding-bottom">
+                        <ion-button size="medium" expand="block" fill="outline" (click)="openAssignUsersModal()">
+                            {{ 'add_user' | translate }}
+                        </ion-button>
+                    </div>
+                </ion-label>
+            </ion-item>
             }
 
             <ng-container formArrayName="weeks">
@@ -98,9 +89,9 @@
                     <ion-list formArrayName="days">
                         @for (day of getDaysArray(weekIndex).controls; track $index; let dayIndex = $index) {
                         <ion-item lines="none" class="day-item" [formGroupName]="dayIndex">
-                            <ion-label>
+                            <div>
                                 <div class="day-header">
-                                    <h2 class="ion-color-light">{{ 'day' | translate }} {{dayIndex+1}}</h2>
+                                    <h3 class="ion-color-light">{{ 'day' | translate }} {{dayIndex+1}}</h3>
                                     <div class="day-actions">
                                         <ion-button fill="clear" size="small" [color]="'medium'"
                                             (click)="presentDayActionPopover($event, weekIndex, dayIndex)">
@@ -132,26 +123,26 @@
                                     </ion-label>
                                     }
 
-                                    <ion-button class="ion-float-end ion-margin-top" fill="outline"
+                                    <ion-button fill="clear" expand="block"
                                         (click)="addExerciseToDay(weekIndex, dayIndex)">
                                         {{ 'add_exercise' | translate }}
                                     </ion-button>
                                 </div>
-                            </ion-label>
+                            </div>
                         </ion-item>
                         }
                     </ion-list>
 
                     @if (getDaysArray(weekIndex).length === 0) {
-                    <ion-item lines="none" class="ion-margin-top">
+                    <ion-item lines="none">
                         <ion-label class="ion-text-center" [color]="'medium'">
                             {{ 'no_days_added' | translate }}
                         </ion-label>
                     </ion-item>
                     }
 
-                    <div class="ion-padding-top ion-padding-bottom">
-                        <ion-button expand="block" (click)="addDay(weekIndex)">
+                    <div class="ion-padding-bottom">
+                        <ion-button fill="outline" expand="block" (click)="addDay(weekIndex)">
                             {{ 'add_day' | translate }}
                         </ion-button>
                     </div>
@@ -166,7 +157,7 @@
 <ion-footer>
     <ion-toolbar>
         <div class="button-group ion-padding">
-            <ion-button class="btn" expand="block" (click)="saveChanges()">
+            <ion-button color="primary" expand="block" (click)="saveChanges()">
                 {{ 'save' | translate }}
             </ion-button>
         </div>
