--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,5 @@
 @import 'scss/global.scss';
+@import 'scss/md/_md.scss';
 
 .header-md {
     -webkit-box-shadow: none;
@@ -67,3 +68,16 @@ button.action-sheet-destructive {
         color: var(--ion-color-danger);
     }
 }
+
+ion-item-options {
+    border-bottom: none !important;
+}
+
+.reorder-selected {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+// ion-item::part(native) {
+//     padding: 0px 16px;
+// }
